poll accounts on consent given and daily afterwards